added the second and third blog

--- a/indesk.html
+++ b/indesk.html
@@ -11,5 +11,15 @@
         <h3>my first website</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, aliquam sed. Possimus libero explicabo, provident cum voluptas veniam esse, eligendi ullam sunt, sapiente a veritatis obcaecati quisquam debitis illo eveniet!</p>
     </div>
+
+    <div>
+        <h3>my second website</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, aliquam sed. Possimus libero explicabo, provident cum voluptas veniam esse, eligendi ullam sunt, sapiente a veritatis obcaecati quisquam debitis illo eveniet!</p>
+    </div>
+
+    <div>
+        <h3>my third website</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, aliquam sed. Possimus libero explicabo, provident cum voluptas veniam esse, eligendi ullam sunt, sapiente a veritatis obcaecati quisquam debitis illo eveniet!</p>
+    </div>
 </body>
 </html>
