added a list to push code

--- a/indesk.html
+++ b/indesk.html
@@ -21,5 +21,13 @@
         <h3>my third website</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, aliquam sed. Possimus libero explicabo, provident cum voluptas veniam esse, eligendi ullam sunt, sapiente a veritatis obcaecati quisquam debitis illo eveniet!</p>
     </div>
+    <div>
+        <h3>how to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m "add a meningful commit message"</li>
+
+        </ul>
+    </div>
 </body>
 </html>
