rocktim ai photo added

--- a/indesk.html
+++ b/indesk.html
@@ -29,5 +29,9 @@
 
         </ul>
     </div>
+    <div>
+        <h3>rocktim</h3>
+        <img src="images/rock.jpg.png" alt="">
+    </div>
 </body>
 </html>
